# notes

./: README.md  index.html  package-lock.json  package.json  service-worker.js  svelte.config.js  tsconfig.json
.github/workflows/: desktop.yml  web.yml
_app/: error.svelte-ef954d4d.js  error.svelte-f415c75b.js  start-390579db.js  start-5942bc17.js  start-8918ec4c.js  start-afaf308a.js  start-dd9bfcc3.js
_app/assets/pages/: __layout.svelte-7cb0ab73.css  __layout.svelte-84705efb.css  __layout.svelte-b3bc0113.css  __layout.svelte-dffc1dd6.css  index.svelte-3e35cdcb.css
_app/chunks/: index-375d8f5a.js  index-6f94a413.js  index-7a1bb196.js  preload-helper-b6664b8f.js  vendor-6caafef3.js  vendor-8e921715.js
_app/pages/: __layout.svelte-3cb45a39.js  __layout.svelte-afc317a3.js  index.svelte-14183730.js  index.svelte-50982ef6.js  index.svelte-67c4006e.js  index.svelte-7ff7f92c.js  index.svelte-ba4fbbf2.js
src/: app.postcss  global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/@types/quill/modules/: syntax.d.ts
src/lib/: constants.ts
src/lib/components/: Layout.svelte  Modal.svelte  Note.svelte  Notes.svelte  RichEditor.svelte  RichViewer.svelte  Tags.svelte
src/lib/editor/: RichEditorTheme.ts  RichEditorTooltip.ts  createQuill.ts  formula.ts  index.css  isEmpty.ts  renderQuill.ts  toSearchString.ts
src/lib/state/: notes.ts  remoteStorage.ts
src/routes/: index.svelte
static/: manifest.json
