[package]
name = "aicacia_notes"
version = "0.1.0"
description = "Aicacia Notes"
authors = [ "nathanfaucett@gmail.com" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/aicacia/notes"
default-run = "aicacia_notes"
edition = "2021"
rust-version = "1.56"
build = "build.rs"

[[bin]]
name = "aicacia_notes"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
